fixed youtube video display on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,3 +38,19 @@ h1 {
 .tick {
 	list-style-image: url(../images/tick-small.png);
 }
+
+
+/* embedded youtube videos 56.25 ratio*/
+.aspect_ratio {
+	position: relative;
+  	width: 80%;
+  	padding-top: 45%;
+}
+
+iframe {
+	position: absolute;
+	top: 0;
+	left: 12%;
+	width: 100%;
+	height: 100%;
+}
